# MoodMate

./: .env  README.md  desktop.ini  pyproject.toml
src/moodmate/: mate.py
